--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
 * {padding: 0; margin: 0; box-sizing: 0;}
 
+body {
+
+    background-color: #F8F9FC;
+
+}
+
+#conectar {
+
+    font-size: 20px;
+    border-radius: 5px;
+
+}
+
+#calendar {
+
+    font-size: 40px;
+
+}
+
+#imagenRedonda {
+
+    height: 100%;
+    width: 100%;
+    border: 2px solid white;
+    padding-top: -25px;
+}
+
+#missatge {
+
+    font-size: 20px;
+    border-radius: 5px;
+
+}
+
 .navbar-vertical {
 
     background-color:#36b9cc;
@@ -12,6 +46,12 @@
     border-radius: 0px 5px 5px 0px;
     color: white;
 
+
+}
+
+.barra-progreso {
+
+    height: 1.5rem !important;
 
 }
 
@@ -65,3 +105,25 @@ li[class="nav-item"] img {
     
 
 }
+
+.ventas-mes {
+
+    border-radius: 5px;
+    border-left: 5px solid #4E73DF;
+
+}
+
+.ventas-anual {
+
+    border-radius: 5px;
+    border-left: 5px solid #1CC88A;
+
+}
+
+.tasques {
+
+    border-radius: 5px;
+    border-left: 5px solid #17A2B8;
+
+}
+
