--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap%27');
+
+
 * {padding: 0; margin: 0; box-sizing: 0;}
 
 body {
 
     background-color: #F8F9FC;
+    font-family: 'Nunito' !important;
 
 }
 
@@ -156,3 +160,30 @@ li[class="nav-item"] img {
 
 }
 
+.navbar-vertical a, i {
+
+    font-size: 18px;
+    font-weight: 600;
+
+}
+
+.navbar-vertical .titulo {
+
+    font-size: 24px;
+    margin-left: 20px;
+
+}
+
+.navbar-vertical .titulo i {
+
+    rotate: 15px;
+    font-size: 30px;
+
+}
+
+.titulo-header {
+
+    font-size: 20px;
+    font-weight: 600;
+
+}
